docs(dark colors):  2 color fixes/enhancements...
- In DARK MODE, in the API documentation, the function names
  were dark black on dark gray -- unreadable.  This version of the
  function-name color-override of the `pygments.css` color for
  function names makes the name readable while being visibly
  different than the argument names.  This ONLY affects the
  DARK MODE color, not the light mode color of the same names.

- Function names and label names were previously the same color.
  Now they are a "lighter" version of the `pygments.css` colors for
  the same color values, lightened just enough to be nicely readable
  against the dark background.

- Both function- and label-name color changes are now limited to
  DARK MODE, and no longer affect the normal mode colors for
  the same names.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -153,7 +153,22 @@ div.body {
 }
 
 /* These replace a color present in `pygments.css` which is used to highlight function
- * and label names.  It is too dark for DARK mode, and nearly black in LIGHT mode so it is
- * difficult to tell that it is even highlighted.  This color override remedies both. */
-.highlight .nf { color: #2648ee } /* Name.Function */
-.highlight .nl { color: #2648ee } /* Name.Function */
+ * and label names.  These are too dark to be readlable in DARK mode.  They include:
+ * .highlight .nf -- function names
+ * .highlight .nl -- code labels
+ * .descname  .n  -- API documentation function names
+ * All 3 were created by lightening the `pygments.css` colors without changing their
+ * angle on the color wheel.  The added "conditional" also limits this change to
+ * DARK MODE only instead of both light and dark modes.
+ */
+html[data-theme="dark"] .highlight .nf {
+  color: #3569f5;
+}
+
+html[data-theme="dark"] .highlight .nl {
+  color: #0043e2;
+}
+
+html[data-theme="dark"] .descname .n {
+  color: #0a44de; /* #dcdba5; */
+}
